Update Stripe payment link to full URL

--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                 拒绝低效率的肉身交付。利用飞书的极速响应与 Notion 的深度沉淀，为您构建闭环的一人公司自动化架构。将实战经验转化为可规模化的数字资产。
             </p>
 
-            <a href="https://buy.stripe.com/14A9AT0om5iz3TU4sN" class="stripe-cta">
+            <a href="https://buy.stripe.com/14A9AT0om5iz3TU4sN9MY00" class="stripe-cta">
                 预约系统诊断 (Stripe 支付) <i data-lucide="chevron-right"></i>
             </a>
         </div>
