--- a/index.html
+++ b/index.html
@@ -1036,15 +1036,20 @@
         }
 
         function checkout(level) {
+            const links = {
+                'L1': 'https://buy.stripe.com/14A5kDc749yP9ee9N79MY01',
+                'L2': 'https://buy.stripe.com/3cI28rb304evbmm3oJ9MY02',
+                'L3': 'https://buy.stripe.com/28E28r1sq7qH0HI7EZ9MY03'
+            };
+
             const msg = document.createElement('div');
             msg.style = "position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); background:#E02020; color:white; padding:30px; z-index:10000; font-weight:900; text-align:center; box-shadow:0 20px 50px rgba(0,0,0,0.5);";
-            msg.innerHTML = `[Locking it in.]<br><br>正在初始化 ${level} 级资产协议包...<br>支付成功后，全套资产将同步至您的邮箱。`;
+            msg.innerHTML = `正在跳转至安全支付页面...<br>请稍候`;
             document.body.appendChild(msg);
 
             setTimeout(() => {
-                window.location.href = "mailto:xuan.xuan.chen1983@gmail.com?subject=Asset_Purchase_" + level;
-                document.body.removeChild(msg);
-            }, 2000);
+                window.location.href = links[level];
+            }, 1000);
         }
     </script>
 </body>
