Update pricing to dual-currency format (USD + CNY)

--- a/index.html
+++ b/index.html
@@ -556,7 +556,9 @@
             <div class="price-card" id="card-l1" onclick="selectCard('l1')">
                 <div class="price-name">LEVEL 1 / 工具版</div>
                 <h3 class="price-title">数字基建启动包</h3>
-                <div class="price-tag">¥1,980<span>/ ONCE</span></div>
+                <div class="price-tag">$299<span> USD</span></div>
+                <div style="font-size:0.75rem; color:var(--text-dim); margin-top:-10px; margin-bottom:15px;">≈ ¥2,180
+                </div>
                 <ul class="feature-list">
                     <li class="feature-item"><i data-lucide="check" size="14"></i> <b>HTML 生产力三件套</b></li>
                     <li class="feature-item"><i data-lucide="check" size="14"></i> 3个入门级 Agent 授权</li>
@@ -569,7 +571,9 @@
                 <div class="hot-badge">HOT / 核心全案</div>
                 <div class="price-name" style="color:var(--hk-red)">LEVEL 2 / 架构版</div>
                 <h3 class="price-title">数字孪生全案包</h3>
-                <div class="price-tag">¥29,800<span>/ DEPLOY</span></div>
+                <div class="price-tag">$3,980<span> USD</span></div>
+                <div style="font-size:0.75rem; color:var(--text-dim); margin-top:-10px; margin-bottom:15px;">≈ ¥29,000
+                </div>
                 <ul class="feature-list">
                     <li class="feature-item"><i data-lucide="zap" size="14"></i> 5大核心医美 Agent 矩阵</li>
                     <li class="feature-item"><i data-lucide="zap" size="14"></i> 21天配置指南 + 视频课</li>
@@ -585,7 +589,9 @@
             <div class="price-card" id="card-l3" onclick="selectCard('l3')">
                 <div class="price-name">LEVEL 3 / 战略版</div>
                 <h3 class="price-title">首席增长官赋能</h3>
-                <div class="price-tag">¥50k+<span>/ PROJECT</span></div>
+                <div class="price-tag">$6,800+<span> USD</span></div>
+                <div style="font-size:0.75rem; color:var(--text-dim); margin-top:-10px; margin-bottom:15px;">≈ ¥50,000+
+                </div>
                 <ul class="feature-list">
                     <li class="feature-item"><i data-lucide="shield" size="14"></i> 全套 19 个 Agent 私有化部署</li>
                     <li class="feature-item"><i data-lucide="shield" size="14"></i> 企业级 GEO 品牌绝对占位</li>
