Add JSON-LD structured data for SEO

--- a/index.html
+++ b/index.html
@@ -20,6 +20,67 @@
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Sans+HK:wght@100..900&display=swap"
         rel="stylesheet">
     <script src="https://unpkg.com/lucide@latest"></script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "GENIUS VISION LIMITED",
+  "url": "https://xuanxuan1983.github.io/genius-vision-site/",
+  "logo": "https://xuanxuan1983.github.io/genius-vision-site/favicon.png",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "香港九龙新蒲岗大有街 2 号旺景工业大厦 D 座 3 楼 D01 室",
+    "addressCountry": "HK"
+  },
+  "identifier": "3076210",
+  "sameAs": [
+    "mailto:xuan.xuan.chen1983@gmail.com",
+    "https://github.com/xuanxuan1983"
+  ]
+}
+</script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Product",
+  "name": "LEVEL 1 / 工具版 – 数字基建启动包",
+  "description": "HTML 生产力三件套 + 3 个入门级 Agent 授权",
+  "offers": {
+    "@type": "Offer",
+    "priceCurrency": "USD",
+    "price": "299",
+    "url": "https://buy.stripe.com/14A5kDc749yP9ee9N79MY01"
+  }
+}
+</script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Product",
+  "name": "LEVEL 2 / 架构版 – 数字孪生全案包",
+  "description": "5 大核心医美 Agent 矩阵 + 21 天配置指南 + 视频课",
+  "offers": {
+    "@type": "Offer",
+    "priceCurrency": "USD",
+    "price": "3980",
+    "url": "https://buy.stripe.com/3cI28rb304evbmm3oJ9MY02"
+  }
+}
+</script>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Product",
+  "name": "LEVEL 3 / 战略版 – 首席增长官赋能",
+  "description": "全套 19 个 Agent 私有化部署 + 企业级 GEO 品牌占位",
+  "offers": {
+    "@type": "Offer",
+    "priceCurrency": "USD",
+    "price": "6800",
+    "url": "https://buy.stripe.com/28E14n2wu8uL6229N79MY04"
+  }
+}
+</script>
 
     <style>
         :root {
